--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>toools</groupId>
 	<artifactId>toools</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>Toools</name>
 	<description>A suite Java toools useful in the context of the development of scientific applications</description>
 	<url>https://github.com/lhogie/toools</url>
@@ -31,7 +31,7 @@
 		<connection>scm:git:git@github.com:lhogie/toools.git</connection>
 		<developerConnection>scm:git:git@github.com:lhogie/toools.git</developerConnection>
 		<url>https://github.com/lhogie/toools</url>
-	  <tag>toools-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<dependencies>
 		<dependency>
