--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,24 @@
 		<url>https://github.com/lhogie/toools</url>
 		<tag>HEAD</tag>
 	</scm>
+	<repositories>
+		<repository>
+			<id>jtoml</id>
+			<url>https://raw.github.com/agrison/jtoml/mvn-repo/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.21</version>
+		</dependency>
+		<dependency>
+			<groupId>me.grison</groupId>
+			<artifactId>jtoml</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
