--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@
 			<version>8.3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jsonex</groupId>
+			<artifactId>JSONCoder</artifactId>
+			<version>0.1.24</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
